docs: documentation GetUserInfo
